--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
+    "start": "vite | node server.js",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
